6.0.4 (not yet released):
- Update ORM to 1.4.
- Fix the PATH environment variable is updated.
- [Ticket #546] Configuration files in /tftpboot are updated when updated
OSCAR.
- [Ticket #532] Implement a cache when detecting the format of repositories.

6.0.3:
- Update CentOS-5 support to CentOS-5.3.
- Improve source code documentation and man pages.
- [Ticket #412] Correctly detect RHEL5 server and client.
- [Ticket #477] Specify and implement the management of distribution's
codename, mandatory for Debian based systems.
- [Ticket #517] Correctly detect all Ubuntu distros.
- [Ticket #524] Prereq status detection is now fixed.
- [Ticker #540] OSCAR::ConfigFile now ignores comments when getting the list
of blocks from a config file.
- Automatically run oscar-updater when installing a new version of the
oscar-base packages.
- Increase the timeout to 9s when getting repository information.
- [Ticket #398] We can now check whether the binary packages specified for the
creation of a image are actually available or not. For that, one just needs to
use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
- Clean-up the prereq management and the bootstrapping mechanisms.
- Add the basic support for Debian Lenny.
- Make sure that all selected OPKGs are actually installed into the image.
- Update Packman to 3.1.10.
- Update Selector to 1.2.1.
- Update Yume to 2.8.9.
- Update RAPT to 2.8.5.
- Update ODA to 1.4.5.
- Update ORM to 1.3.
- Update the Configurator 1.0.2.
- Include an OSCAR Package for the Berkeley Lab Checkpoint/Restart (BLCR).

6.0.2:
- Fix the oscar_image_cleanup script.
- Include mirroring capabilities for yum repositories.
- Update the list of binary packages installed in all Debian based images.
- Fix various issues with the SIS api-post-image script.
- Correctly generate the /etc/c3.conf file.
- Make sure the node deletion does not fail when we do not have connectivity
with compute nodes.